<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="telopay.timwe.com.telopay.SecurityPinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="20sp"
       android:textStyle="bold"
       android:textAlignment="center"
       android:paddingBottom="15dp"
       android:text="@string/text_prompt_pin"/>

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/txt_pin_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        app:pinBackgroundDrawable="@drawable/text_border"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="4"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center"
        app:pinLineStroke="2dp"
        app:pinLineStrokeSelected="4dp"
        app:pinBackgroundIsSquare="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_security_prompt_screen"/>

    </LinearLayout>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/btn_text_proceed"
        android:id="@+id/btnProceed"
        android:background="@drawable/grey_button"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:inputType="none" />

</RelativeLayout>
