<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="telopay.timwe.com.telopay.CallDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/text_called_number"
            android:textColor="@color/teloGrey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="+351 123456789"
            android:id="@+id/destinationMsisdn"
            android:textColor="@color/teloBlack"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/text_call_duration"
            android:textColor="@color/teloGrey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="02:03"
            android:id="@+id/callDuration"
            android:textColor="@color/teloBlack"
            android:textSize="30sp" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/text_amount_charge"
                    android:textColor="@color/teloGrey" />

                <TextView
                    android:id="@+id/txtAmountCharged"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="3.20Kz"
                    android:textColor="@color/teloBlack"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/text_balance_remaining"
                    android:textColor="@color/teloGrey"/>

                <TextView
                    android:id="@+id/txtBalanceRemain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="6.80Kz"
                    android:textColor="@color/teloBlack"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_make_another_Call"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgViewNewCall"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/dial"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_call"
                android:textSize="18sp"
                android:textColor="@color/teloGrey"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnTerminateSession"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgViewEndSession"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/end_session"
                android:textSize="18sp"
                android:textColor="@color/teloGrey"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
