<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="telopay.timwe.com.telopay.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:text="@string/text_home_screen_title"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/telo_icon" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/viewMakeCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone"
                    android:contentDescription="@string/call_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/teloBlack"
                        android:text="@string/text_make_call"/>



                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/viewPayphoneActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/list"
                    android:contentDescription="@string/call_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/teloBlack"
                        android:text="@string/text_payphone_activity"/>



                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/viewConfiguration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cogs"
                    android:contentDescription="@string/call_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/teloBlack"
                        android:text="@string/text_configuration"/>



                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
