<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="telopay.timwe.com.telopay.CallInProgressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teloBlack"
        android:paddingBottom="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtDestMsisdn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+351 123456789"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teloGrey"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/text_call_duration"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:id="@+id/txtDuration"
                    android:text="0:00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teloGrey"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/text_call_time_remaining"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teloRed"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:id="@+id/txtTimeRemaining"
                    />

            </LinearLayout>
            
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:rowCount="2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:padding="16dp"
                android:src="@drawable/speaker_white"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="end"
                android:padding="16dp"
                android:src="@drawable/mute"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="16dp"
                android:layout_gravity="start"
                android:src="@drawable/hold"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="16dp"
                android:layout_gravity="end"
                android:src="@drawable/keyboard"/>

        </GridLayout>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/text_terminate_call"
        android:id="@+id/btnTerminateCall"
        android:background="@drawable/red_button"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
